--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                 </div>
 
                 <div>
-                    <h4>Somosa (Chicken )</h4>
+                    <h4>Samosa (Chicken )</h4>
                     <img src="img/cs.webp" alt="">
                     <p>$</p>
                 </div>
 
                 <div>
-                    <h4>Somosa (vegetable )</h4>
+                    <h4>Samosa (vegetable )</h4>
                     <img src="img/vs.jpeg" alt="">
                     <p>$</p>
                 </div>
