modified css n html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <div>
             <div class="bwa">
-                <h1>BAWARCHI </h1>
+                <h1>B<span class="a">A</span><span class="w">W</span><span class="A">A</span><span class="r">R</span><span class="c">C</span><span class="h">H</span><span class="i">I</span> </h1>
 
             
                 <h4>HALAL</H4>
